--- a/Demo/TextEffects/index.html
+++ b/Demo/TextEffects/index.html
@@ -29,9 +29,7 @@
         <div class="container">
 
             <div class="circle">
-                <div id="text-el" class="text">
-					<div id="text"></div>
-				</div>
+                <div id="text" class="text"></div>
             </div>
 			
 			<div id="continue-el">
