--- a/Demo/GitAPI.html
+++ b/Demo/GitAPI.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="Stylesheet" type="text/css" href="main.css">
+        <link rel="Stylesheet" type="text/css" href="git-main.css">
         <title>
             Github API
         </title>
