--- a/Demo/index.html
+++ b/Demo/index.html
@@ -9,7 +9,7 @@
 		Website as a Tool: Cassidy
 	</title>
     
-	<link rel="stylesheet" type="text/css" href="git-main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   
