--- a/Demo/index.html
+++ b/Demo/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     
 	<title>
-		Website as a Tool: Cassidy
+		Welcome to the simulation
 	</title>
     
 	<link rel="stylesheet" type="text/css" href="main.css">
