--- a/Demo/GitAPI.html
+++ b/Demo/GitAPI.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="Stylesheet" type="text/css" href="git-main.css">
+        <link rel="Stylesheet" type="text/css" href="git/git-main.css">
         <title>
             Github API
         </title>
-        <script src="git-api.js"></script>
+        <script src="git/git-api.js"></script>
     </head>
     <body>
         <div id="wrap">
