--- a/Demo/GrovePeak/www/content/HowWeWork.html
+++ b/Demo/GrovePeak/www/content/HowWeWork.html
@@ -3,7 +3,7 @@
     accept one mandate at a time.
 </p>
 <p>
-    The Grovepeak Way of raising capital is the result of over 10 years of
+    <b>The Grovepeak Way</b> of raising capital is the result of over 10 years of
     experience investing and raising capital for Private Equity Funds, having
     worked at one of the largest pension funds in the region, one of the
     leading global Fund of Funds Managers and having worked with other
