--- a/Demo/GrovePeak/www/content/WhatWeDo.html
+++ b/Demo/GrovePeak/www/content/WhatWeDo.html
@@ -1,5 +1,5 @@
 <p>
-    Grovepeak provides placement services in Latin America to Private
+    <b>Grovepeak</b> provides placement services in Latin America to Private
     Equity Fund Managers. We advise Fund Managers throughout the fundraising
     process, including local regulatory compliance, leveraging over
     10 years of experience raising capital in the region.
