--- a/Demo/GrovePeak/www/index.html
+++ b/Demo/GrovePeak/www/index.html
@@ -33,18 +33,15 @@
 				/>
 				<div id="contact-el">	
 					<div id="contact-header">CONTACT</div>
-					<div id="contact-mail">farboleda@grovepeak.com</div>
-					<div id="contact-number">+57 320.463.24.06</div>
+					<div id="contact-mail"><a data-rel="external" href="mailto:farboleda@grovepeak.com">farboleda@grovepeak.com</a></div>
+					<div id="contact-number"><a data-rel="external" href="tel:+57 320.463.2406">+57 320.463.2406</a></div>
 				</div>
 <!-- Main content section -->
 				<div id="content">
 					<div id="content-inner">
 
 						<div id="content-header">
-							<img 
-							src="images/TitleImage.png"
-							height="35em"
-							/>
+							GrovePeak
 						</div>
 						<hr/>
 
@@ -78,12 +75,10 @@
 	
 <!-- This is the landscape image that appears at the -->
 <!-- bottom of the content area -->
-					<div id="content-landscape">
-					<img 
+					<img  id="content-landscape"
 						src="./images/Landscape.png" 
 						width="100%" height="auto"
 					/>
-					</div>
 
 				</div>
 			</div>
@@ -119,8 +114,8 @@
 			<div id="footer">
 				<div id="footer-contact">
 					<div id="footer-contact-header">CONTACT</div>
-					<div id="footer-contact-mail">farboleda@grovepeak.com</div>
-					<div id="footer-contact-number">+57 320.463.24.06</div>
+					<div id="footer-contact-mail"><a data-rel="external" href="mailto:farboleda@grovepeak.com">farboleda@grovepeak.com</a></div>
+					<div id="footer-contact-number"><a data-rel="external" href="tel:+57 320.463.2406">+57 320.463.2406</a></div>
 				</div>
 			</div>
 
