--- a/Demo/GrovePeak/www/content/WhatSetsUsApart.html
+++ b/Demo/GrovePeak/www/content/WhatSetsUsApart.html
@@ -1,28 +1,24 @@
+<div id="profile">
+<div id="profile-image">
+    <img
+        src="images/FranciscoJArboleda.png"
+        width="100%" height="100%" 
+    />
+</div>
 
-<img
-    src="images/FranciscoJArboleda.png"
-    width="25%" height="auto" style="position: relative; float: left; align: left;"
-/>
-<div
-    style="
-        position: relative;
-        float: left;
-        margin-left: 24px;
-        width: 55%;
-        height: auto;
-    "
->
+<div id="profile-text">
     <h3>Francisco J. Arboleda</h3>
-    
+
     Location: Bogota, Colombia<br/>
-    Phone: +57 320.463.2406<br/>
-    Email: farboleda@grovepeak.com<br/>
-    www.linkedin.com/in/arboleda<br/>
+    Phone: <a data-rel="external" href="tel:+57 320.463.2406">+57 320.463.2406</a><br/>
+    Email: <a data-rel="external" href="mailto:farboleda@grovepeak.com">farboleda@grovepeak.com</a><br/>
+    LinkedIn: <a href="http://www.linkedin.com/in/arboleda">www.linkedin.com/in/arboleda</a><br/>
     Download VCard<br/>
+</div>
 </div>
 
 <p style="clear: both; padding-top: 24px;">   
-    Before founding Grovepeak, Francisco was the co-head of HarbourVest’s
+    Before founding <b>Grovepeak</b>b>, Francisco was the co-head of HarbourVest’s
     Latin American office, co-leading all investment and fundraising efforts. While
     at HarbourVest he raised ~$1.4bn from 21 LPs in 3 different countries. Prior to
     HarbourVest, he was responsible for managing the private equity portfolio for
