--- a/Demo/GrovePeak/www/index.html
+++ b/Demo/GrovePeak/www/index.html
@@ -12,6 +12,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<meta name="viewport" content="width=device-width">
 		
+		<title>
+			GrovePeak
+		</title>
+		
 		<script src="plugins/jquery-1.11.0.js"></script>
 		<script src="plugins/jquery-colour.js"></script>
 
