--- a/Demo/GrovePeak/www/content/WhatSetsUsApart.html
+++ b/Demo/GrovePeak/www/content/WhatSetsUsApart.html
@@ -12,7 +12,7 @@
     Location: Bogota, Colombia<br/>
     Phone: <a data-rel="external" href="tel:+57 320.463.2406">+57 320.463.2406</a><br/>
     Email: <a data-rel="external" href="mailto:farboleda@grovepeak.com">farboleda@grovepeak.com</a><br/>
-    LinkedIn: <a href="http://www.linkedin.com/in/arboleda">www.linkedin.com/in/arboleda</a><br/>
+    LinkedIn: <a href="https://www.linkedin.com/in/fjarboleda/">https://www.linkedin.com/in/fjarboleda/</a><br/>
     Download VCard<br/>
 </div>
 </div>
