--- a/Demo/GrovePeak/www/content/HowWeWork.html
+++ b/Demo/GrovePeak/www/content/HowWeWork.html
@@ -1,18 +1,15 @@
 <p>
-    We believe in exclusivity and quality over quantity, therefore we only
-    accept one mandate at a time.
-</p>
-<p>
-    <b>The Grovepeak Way</b> of raising capital is the result of over 10 years of
-    experience investing and raising capital for Private Equity Funds, having
-    worked at one of the largest pension funds in the region, one of the
-    leading global Fund of Funds Managers and having worked with other
-    placement agents.
-</p>
-<p>
-    Our methodology is a refined process to minimize the Manager’s work
-    load and maximize capital raised. Grovepeak will lead the pre-marketing
-    efforts, in order to identify genuine prospects, and then work alongside
-    the Fund Manager during the closing process to optimize time and
-    resources.
+    We believe in exclusivity and quality over quantity, therefore we only 
+    accept one mandate at a time.<br/><br/>
+    
+    The <b>GrovePeak</b> Way of raising capital is the result of over 10 
+    years of experience investing and raising capital for Private Equity 
+    Funds, having worked at one of the largest pension funds in the region, 
+    one of the leading global Fund of Funds Managers and having worked 
+    with other placement agents.<br/><br/>
+    
+    Our methodology is a refined process to minimize the Manager’s work 
+    load and maximize capital raised. <b>GrovePeak</b> will lead the 
+    pre-marketing  efforts, in order to identify genuine prospects and 
+    then work alongside the Fund Manager during the closing process.
 </p>
