--- a/Demo/GrovePeak/www/content/WhatWeDo.html
+++ b/Demo/GrovePeak/www/content/WhatWeDo.html
@@ -1,6 +1,6 @@
 <p>
-    <b>Grovepeak</b> provides placement services in Latin America to Private
-    Equity Fund Managers. We advise Fund Managers throughout the fundraising
-    process, including local regulatory compliance, leveraging over
-    10 years of experience raising capital in the region.
+    <b>GrovePeak</b> provides placement services in Latin America to Private 
+    Equity Fund Managers. We advise Fund Managers throughout the 
+    fundraising process, including local regulatory compliance, as 
+    well as client management.
 </p>
