--- a/Demo/GrovePeak/www/content/WhoWeServe.html
+++ b/Demo/GrovePeak/www/content/WhoWeServe.html
@@ -1,5 +1,6 @@
 <p>
-    <b>Grovepeak</b> specializes in advising foreign Private Equity Fund Managers.
-    Leveraging our background and industry knowledge, our goal is to advise
-    best-in-class Managers who have no access to Latin American investors.
+    <b>GrovePeak</b> specializes in advising foreign Private Equity 
+    Fund Managers. Leveraging our background and industry knowledge, 
+    our goal is to advise best-in-class Managers who have no access 
+    to Latin American investors.
 </p>
