--- a/Demo/ed/index.html
+++ b/Demo/ed/index.html
@@ -14,7 +14,7 @@
             <div id="inner">
 
                 <select id="select-class" class="selection">
-                    <option value="none">-- none --</option>
+                    <option value="none">none</option>
                     <option value="class-1">class-1</option>
                     <option value="class-2">class-2</option>
                     <option value="class-2">class-3</option>
@@ -22,7 +22,7 @@
                 <label for="select-style">Class</label>
 
                 <select id="select-style" class="selection">
-                    <option value="none">-- none --</option>
+                    <option value="none">none</option>
                     <option value="red-text">color: red</option>
                     <option value="green-text">color: green</option>
                     <option value="blue-text">color: blue</option>
