--- a/Demo/ed/index.html
+++ b/Demo/ed/index.html
@@ -14,19 +14,19 @@
             <div id="inner">
 
                 <select id="select-class" class="selection">
-                    <option value="none">none</option>
-                    <option value="class-1">class-1</option>
-                    <option value="class-2">class-2</option>
-                    <option value="class-2">class-3</option>
+                    <option id="none" value="none">none</option>
+                    <option id="class-1" value="class-1">class-1</option>
+                    <option id="class-2" value="class-2">class-2</option>
+                    <option id="class-3" value="class-2">class-3</option>
                 </select>
                 <label for="select-style">Class</label>
 
                 <select id="select-style" class="selection">
-                    <option value="none">none</option>
-                    <option value="red-text">color: red</option>
-                    <option value="green-text">color: green</option>
-                    <option value="blue-text">color: blue</option>
-                    <option value="bold-text">color: green</option>
+                    <option id="none" value="none">none</option>
+                    <option id="red-text" value="red-text">color: red</option>
+                    <option id="green-text" value="green-text">color: green</option>
+                    <option id="blue-text" value="blue-text">color: blue</option>
+                    <option id="bold-text" value="bold-text">color: green</option>
                 </select>
                 <label for="select-style">Style</label>
                 
