--- a/Demo/ed/index.html
+++ b/Demo/ed/index.html
@@ -4,6 +4,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <style>
+            .class-1{ color: #FF0; }
+            .class-2 { color: #F0F; }
+            .class-3 { color: #0FF; }
+            .bold-text { font-weight: bold; }
+        </style>
         <title>
             Ed
         </title>
@@ -23,10 +29,10 @@
 
                 <select id="select-style" class="selection">
                     <option id="none" value="none">none</option>
-                    <option id="red-text" value="red-text">color: red</option>
-                    <option id="green-text" value="green-text">color: green</option>
+                    <option id="red-text" value="red-text">color: red;</option>
+                    <option id="green-text" value="green-text">color: green;</option>
                     <option id="blue-text" value="blue-text">color: blue</option>
-                    <option id="bold-text" value="bold-text">color: green</option>
+                    <option id="bold-text" value="bold-text">font-weight: bold;</option>
                 </select>
                 <label for="select-style">Style</label>
                 
